# CosineCodeBase

./: .gitignore  README.md
cosine_models/: Makefile  README.md  runBaselinesUnoptimized.sh  runCosineCLA.sh  runCosineCLAWithData.sh
cosine_models/compute-cost-models/: README.md  cost-model-btrees-cmd-line.c  cost-model-computations-cmd-line.c  cost_formula_computation.c  meena_unif_data.txt  new.c  new_tuned_opportunities.c  verify
cosine_models/src/: Makefile  SLA_factors.c  VM_library.c  VM_migration.c  compare_designs.c  compression_library.c  continuum.c  design_space_navigation.c  design_template.c  experiments.c  (+8 more)
hybrid_de/: Cargo.toml  README.md  benchmark.sh  benchmark_cpus.sh  benchmark_hybrid.sh  benchmark_size.sh  check_diff_no_order.py  config  evaluate.py  first_time.sh  index  packed-refs  workload.cc
hybrid_de/logs/refs/heads/: master
hybrid_de/objects/pack/: pack-1cac7781037c97cfae6d5f4768411ae8a13f0e4b.idx  pack-1cac7781037c97cfae6d5f4768411ae8a13f0e4b.pack
hybrid_de/refs/heads/: master
hybrid_de/src/: configuration.rs  lib.rs  lib_helper.rs  lib_merge.rs  main.rs  metrics.rs
hybrid_de/src/lib_in_memory/: mod.rs
hybrid_de/src/lib_lsh_table/: mod.rs
hybrid_de/src/lib_lsh_table/lib_disk_file/: mod.rs
hybrid_de/src/lib_lsm_tree/: mod.rs
hybrid_de/src/lib_on_disk/: mod.rs
hybrid_de/src/lib_on_disk/lib_disk_file/: mod.rs
hybrid_de/src/lib_on_disk/lib_disk_level/: mod.rs
hybrid_de/src/lib_on_disk/lib_disk_run/: mod.rs
hybrid_de/src/lib_template/: mod.rs
hybrid_de/src/lib_test/: mod.rs
hybrid_de/src/lib_workload/: mod.rs
(+27 files in other folders)
