[profile.release]
debug = true

[package]
name = "hybrid_de"
version = "0.1.0"
authors = ["Subarna <subarna@g.harvard.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
bloom = "0.2.0"
lazy_static = "1.4.0"
gag = "0.1.10"
clap = "2.33.0"
stderr = "0.8.0"
is_sorted = "0.1.1"
log = "0.4"
env_logger = "0.7.1"
prometheus = "0.8.0"
threadpool = "1.8.0"
parking_lot = { version = "0.10.2", features = ["deadlock_detection"] }
atomic-counter = "1.0.1"
cargo-instruments = "0.3.1"
schedule_recv = "0.1.0"